@@ -6,22 +6,23 @@ import java.util.List;
 public class M216CombinationSum3 {
 
     public List<List<Integer>> combinationSum3(int k, int n) {
-        List<List<Integer>> ans = new ArrayList<>();
-        generate(ans, new ArrayList<>(), k, n, 1);
-        return ans;
+        List<List<Integer>> combinations = new ArrayList<>();
+        backtrack(combinations, new ArrayList<>(), 0, 1, k, n);
+        return combinations;
     }
 
-    private void generate(List<List<Integer>> ans, List<Integer> curr, int size, int target, int index) {
-        if (target == 0 && curr.size() == size) {
-            ans.add(new ArrayList<>(curr));
+    private void backtrack(List<List<Integer>> combinations, List<Integer> curr, int sum, int index, int k, int n) {
+        if (curr.size() == k) {
+            if (sum == n) {
+                combinations.add(new ArrayList<>(curr));
+            }
             return;
         }
-        if (target < 0 || curr.size() == size) return;
 
         for (int i = index; i <= 9; i++) {
             curr.add(i);
-            generate(ans, curr, size, target - i, i + 1);
-            curr.remove(curr.size() - 1);
+            backtrack(combinations, curr, sum + i, i + 1, k, n);
+            curr.removeLast();
         }
     }
 }
